--- a/weather.css
+++ b/weather.css
@@ -10,6 +10,9 @@ body {
     display: grid;
     margin: 50px;
 }
+.weather h1 span { /*to make the text color yellow*/
+    color: pink;
+}
 .weather {
     place-self: center; /*beacause we use the display grid in the parent div*/
     padding: 40px;
@@ -34,12 +37,15 @@ body {
     background: rgba(255,255,255,0.1);
     font-size: 18px;
 }
-.search-bar button img{
+.search-bar input::placeholder {
+    color: white;
+}
+.search-bar button i{
     width: 55px;
     padding: 15px;
     border-radius:50%;
-    color: black;
-    font-size: 24px;
+    color: #000000bd;
+    font-size: 20px;
     background: #fff;
     z-index: 1;
 }
@@ -130,7 +136,7 @@ body {
     .weather-data .col img {
         width: 20px;
     }
-    button img {
+    button i {
         width: 40px;
         font-size: 40px;
         color: black;
@@ -164,8 +170,35 @@ body {
     .weather-data .col img {
         width: 18px;
     }
-    button img {
-        width: 35px;
-        font-size: 35px;
+    button i {
+        z-index: 1;
+        background: #fff;
+        color: black;
+        font-size: 10px;
+    }
+    .search-bar input {
+        font-size: 16px;
+        border-radius: 50px;
+        padding-left: 15px;
+        margin: 10px;
+    }
+    .weather-data {
+        padding: 5px;
+    }
+    .weather-data .col {
+        gap: 5px;
+    }
+    .weather-data .col img {
+        width: 15px;
+    }
+    .weather {
+        width: 100%;
+    }
+    .body {
+        margin: 0;
+    }
+    .weather h1 {
+        font-size: 20px;
+        color: #ffff00;
     }
 }
